# rust-static-config

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  build.rs  static_config.toml
src/: lib.rs
template/: static_config.rs.template
test_workspace/: Cargo.toml  static_config.toml
test_workspace/test_lib_link/: Cargo.toml
test_workspace/test_lib_link/src/: lib.rs
test_workspace/test_lib_link/tests/: test_new_val.rs
tests/: test_cpu_count.rs  test_static_config.rs
